# k8s-discovery

./: README.md  aks_discovery.py  aws_discover.py  azure_discover.py  common.py  eks_discovery.py  gke_discover.py  gke_discovery.py  k8s_resources.py  kraw.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: release-builder.yml
